syntax = "proto3";

package targets;

import "controller.proto";
import "types.proto";

message Comparison {
  message LessThan {
    int32 value = 1;
  }
  message LessThanOrEqual {
    int32 value = 1;
  }
  
  oneof value {
    LessThan less_than = 1;
    LessThanOrEqual less_than_or_equal = 2;
  }
}

message SpellTarget {
  controller.Controller controller = 1;
  repeated types.Type types = 2;
  repeated types.Subtype subtypes = 3;
}

message Restriction {
  message NotSelf {
  }
  message OfType {
    repeated types.Type types = 1;
    repeated types.Subtype subtypes = 2;
  }
  message Self {
  }
  message Toughness {
    Comparison comparison = 1;
  }
  message ControllerControlsBlackOrGreen {
  }

  oneof restriction {
    ControllerControlsBlackOrGreen controller_controls_black_or_green = 1;
    NotSelf not_self = 2;
    OfType of_type = 3;
    Self self = 4;
    Toughness toughness = 5;
  }
}